@@ -3,6 +3,9 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2010-12-20 (CVS):
+    * gtk launcher: fix the demo-only build.
+
 2010-12-19 (CVS):
     * Bumped uhexen2 version to 1.5.0-rc1.  Bumped the hexen2 engine version
       to 1.23 and hexenworld engine version to 0.23.  Added ReleaseNotes-1.5.0
